[package]
name = "trident-storage"
version = "0.1.0"
edition = "2021"

[lib]
name = "trident_storage"
path = "src/lib.rs"

[[bin]]
name = "trident-storage"
path = "bin/main.rs"

[dependencies]
anyhow = "1.0.79"
async-stream = "0.3"
aws-sdk-s3 = "1.12.0"
aws-config = "1.1.2"
aws-credential-types = { version = "1.0", features = ["hardcoded-credentials"] }
axum = "0.7"
bisection = "0.1"
clap = { version = "4.4", features = ["derive"] }
iroh = { version = "0.12.0", branch = "main", git = "https://github.com/izihawa/iroh", features = [ "flat-db", "metrics" ] }
iroh-io = { version = "0.3.0" }
md5 = "0.7"
percent-encoding = "2.3.1"
quic-rpc = "0.6"
quinn = "0.10"
serde = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
lru = "0.12.1"
tokio-task-pool = "0.1.5"
reqwest = { version = "0.11.24", default-features = false, features = ["rustls", "multipart"] }
