[package]
name = "trident-storage"
version = "0.0.20"
edition = "2021"

[lib]
name = "trident_storage"
path = "src/lib.rs"

[[bin]]
name = "trident-storage"
path = "bin/main.rs"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
axum = "0.7"
bisection = "0.1"
clap = { version = "4.5", features = ["derive"] }
flume = "0.11"
iroh = { version = "0.14.0", branch = "main", git = "https://github.com/izihawa/iroh", features = [ "metrics" ] }
iroh-base = { version = "0.14.0", branch = "main", git = "https://github.com/izihawa/iroh" }
iroh-io = { version = "0.6.0" }
md5 = "0.7"
percent-encoding = "2.3.1"
quic-rpc = { version = "0.7.0", features = ["flume-transport", "quinn-transport"] }
quinn = "0.10"
rand = "0.9.0-alpha.1"
redb = { version = "2.0.0", features = ["logging"] }
serde = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
lru = "0.12"
tokio-task-pool = "0.1"
url = "2.5.0"
mime_guess = "2.0.4"
bytes = "1.6.0"
hyper = "1.3.1"
headers = "0.4.0"
range-collections = "0.4.5"
