[tool.poetry]
name = "izihawa-trident-client"
version = "1.1.1"
description = ""
authors = ["Pasha Podolsky <ppodolsky@me.com>"]
readme = "README.md"
packages = [{include = "trident"}]


[tool.poetry.dependencies]
python = ">=3.9,<3.13"
aiobaseclient = "^0.4.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
