[tool.poetry]
name = "izihawa-trident-client"
version = "1.3.12"
description = ""
authors = ["Pasha Podolsky <ppodolsky@me.com>"]
readme = "README.md"
packages = [{include = "trident"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
aiobaseclient = "^0.4.10"
aiofiles = "^23.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
trident-cli = "trident.cli:main"